# cnc-milling-machine

./: .gitignore  Cargo.toml  README.md  bug.gcode  calibrate.gcode  complex-curve.gcode  example.gcode  linearExample.gcode  longtest.gcode  one.gcode  settings.yaml  test.ngc  text.gcode
PCB/: cnc_rev3.brd  cnc_rev3.cam  cnc_rev3.sch
gnc/: gnc.js
src/: app.rs  cnc.rs  hardware_controller_interface.rs  main.rs  settings.rs  types.rs
src/app/: mod.rs  run.rs  setters.rs  settings.rs  ui_communication.rs
src/app_1/: mod.rs  run.rs
src/control/: console_controller.rs  mod.rs  xbox_controller.rs
src/controller/: mod.rs  software_controller.rs  xbox_controller.rs
src/gnc/: mod.rs
src/hardware_controller/: hardware_controller_interface.rs  hardware_feedback.rs  instruction.rs  mod.rs  types.rs
src/hardware_controller/executer/: manual_spindel.rs  mod.rs  on_off_spindel.rs
src/hardware_controller/motor/: mock_motor.rs  mod.rs  step_motor.rs
src/io/: actor.rs  mod.rs  switch.rs
src/motor/: mock_motor.rs  mod.rs  motor_controller.rs  motor_controller_thread.rs  step_motor.rs  task.rs
src/program/: mod.rs
src/settings/: mod.rs
src/switch/: mod.rs
src/ui/: mod.rs  system.rs  types.rs  ws_connection.rs
src/ui copy/: mod.rs  types.rs
src/ui/console/: mod.rs
src/ui/web/: mod.rs  system.rs  ws_connection.rs
ui/: .eslintrc.json  package-lock.json  package.json  tsconfig.json
ui/src/: Main.tsx  index.html  responsive.css  theme.ts  types.ts
ui/src/components/: AlertBox.tsx  Button.tsx  Editor.tsx  InfoBar.tsx  Input.tsx  Menu.tsx  MotorBox.tsx  (+2 more)
(+29 files in other folders)
