[package]
name = "cnc-control"
version = "0.3.0"
authors = ["alexander89"]
edition = "2018"

[dependencies]
rppal = "0.11.3"
gilrs = "0.7"
gcode = "0.6.1"
log = "0.4.11"
crossbeam-channel = "0.5"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
futures = {version="0.3", features = ["thread-pool"]}
actix = "0.10"
actix-web = "3"
actix-web-actors = "3"
actix-cors = "0.5"
actix-files = "0.5"
uuid = {version="0.8", features = ["v4", "serde"]}
notify = "4.0"
thread-priority = "0.2.1"
